changes to docker files for setting up biosensors labs 2024

--- a/jupyter/templates/login.html
+++ b/jupyter/templates/login.html
@@ -80,9 +80,17 @@
 </div>
 {% endblock login %}
 
-<!-- Include iframe -->
-<iframe src="https://mofem.github.io/Workshop2023/" 
-  width="100%" height="1600" title="Workshop 2023" frameborder="0" style="border:none;"></iframe>
+<!-- How to log in -->
+<div class="notes">
+  <h1>
+    <center>Welcome to JWSoE Teaching server!</center>
+  </h1>
+  <h3>Login and password:</h3>
+  <ul>
+    <li>username: your GUID (7 digits and a letter)</li>
+    <li>password: whatever you enter at the first login (at least 7 characters) </li>
+  </ul>
+</div>
 
 {% endblock %}
 
